--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-file-base64": "^1.0.3",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
   },
