--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.13",
+    "@mui/material": "^5.11.15",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/x-date-pickers": "^6.0.4",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
